--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,16 @@ governor = "0.6"
 nonzero_ext = "0.3"
 arrayvec = "0.7"
 wide = "0.7"
+rusqlite = { version = "0.31", features = ["bundled", "backup"] }
+thiserror = "1.0"
+
+# Dashboard dependencies
+axum = { version = "0.7", features = ["macros"] }
+tower = "0.4"
+tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
+async-stream = "0.3"
+futures = "0.3"
+tokio-stream = "0.1"
 
 [dev-dependencies]
 criterion = { version = "0.5", features = ["html_reports"] }
